# nomad_aiengineer_1st

./: .gitignore
d02-movie-expert-agent/: main.ipynb  main.py  pyproject.toml
d03-movie-recommendation-bot-with-memory/: main.ipynb  main.py  pyproject.toml
d05-movie-agent-complete-agentic-loop/: main.ipynb  main.py  pyproject.toml
d09-life-coach-web-search/: life-coach-memory.db  main.py  pyproject.toml
d10-life-coach-file-search/: life-coach-memory.db  main.py  pyproject.toml  workout-plan.txt
d11-life-coach-vision-boards/: life-coach-memory.db  main.py  pyproject.toml
d16-restaurant-bot-handoffs/: main.py  pyproject.toml  restaurant-memory.db  restaurant_app.py  restaurant_models.py
d16-restaurant-bot-handoffs/my_agents/: triage_agent.py
d16-restaurant-bot-handoffs/restaurant_agents/: menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
d17-restaurant-bot-guardrails-complaints/: main.py  models.py  pyproject.toml  restaurant-memory.db
d17-restaurant-bot-guardrails-complaints/restaurant_agents/: complaints_agent.py  context_prompt.py  guardrails.py  menu_agent.py  (+3 more)
d23-story-book-maker-basic-pipeline/: main.py  pyproject.toml
d25-story-book-maker-complete/: main.py  pyproject.toml
final-01/: AGENTS.md  CLAUDE.md  README.md  langgraph.json  main.ipynb  main.py  playground.ipynb  pyproject.toml  tui.py
final-01/src/git_study/: __init__.py  graph.py  main.py  tui.py
final-01/src/git_study/tui/: __init__.py  app.py  code_browser.py  commit_selection.py  inline_quiz.py  repo_loading.py  result_metadata.py  state.py  widgets.py
(+121 files in other folders)
